# eyedrop

./: .gitignore  CMakeLists.txt  LIBRARIES  LICENSE  README.md  build_headers.c  build_headers.cpp  build_meta.cpp  header_builds.c  shell.html  shell_full.html  shell_resize.html
art/: drop.fla  dropLogo.fla  dropShapes.fla  dropThemeImage.fla
assets/art/: dropColorScheme.fla
assets/embed/fonts/: font_aileron_regular.h
assets/embed/icons/: drop_icon128.h  drop_icon128_2.h  drop_icon128_3.h
core/: Containers.h  Math.cpp  Math.h  Random.cpp  Random.h  Strings.cpp  Strings.h  Variant.cpp  Variant.h  compare.cpp  compare.h  containers.cpp  containers.h  imaging.h  imaging_compare.cpp  imaging_filter.cpp  math.cpp  math.h  random.cpp  random.h  string.cpp  string.h
core/geometry/: Matrix.cpp  Matrix.h  Point.cpp  Point.h  PointF.cpp  PointF.h  PolygonF.cpp  PolygonF.h  Rect.cpp  Rect.h  RectF.cpp  RectF.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
core/imaging/: Bitmap.cpp  Bitmap.h  Color.cpp  Color.h  Filter.cpp  Filter.h  Image.cpp  Image.h  imaging.h  imaging_compare.cpp  imaging_filter.cpp
core/types/: bitmap.cpp  bitmap.h  color.cpp  color.h  image.cpp  image.h  point.cpp  point.h  pointf.cpp  pointf.h  polygonf.cpp  polygonf.h  rect.cpp  rect.h  rectf.cpp  rectf.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
editor/: Edit.cpp  Editor.cpp  Editor.h  Types.h  editor.cpp  input.h  main.cpp
editor/ui/: Dockspace.cpp  Dockspace.h  Images.cpp  Images.h  Menu.cpp  Menu.h  Toolbar.cpp  Toolbar.h
editor/wid/: StyleTheme.cpp  StyleTheme.h
editor/widgets/: StyleSelector.cpp  StyleSelector.h  ThemeSelector.cpp  ThemeSelector.h
engine/aapp/: App.cpp
engine/aapp/sokol/: Event__strings.h
engine/app/: App.cpp  App.h  Blank.h  Image.cpp  Image.h  RenderContext.cpp  RenderContext.h
engine/app/core/: Containers.h  Math.cpp  Math.h  Random.cpp  Random.h  Reflect.h  Strings.cpp  Strings.h
engine/app/file_system/: FileLoader.cpp  FileLoader.h  LoadImage.cpp  LoadImage.h
engine/app/filesystem/: Fetch.h
engine/app/geometry/: Matrix.cpp  Matrix.h  Point.cpp  Point.h  PointF.cpp  PointF.h  PolygonF.cpp  PolygonF.h  Rect.cpp  Rect.h  RectF.cpp  RectF.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
engine/app/image/: Bitmap.cpp  Bitmap.h  Color.cpp  Color.h  Filter.cpp  Filter.h  Image.cpp  Image.h
engine/app/imaging/: Image.cpp  Image.h
engine/app/imgui/: ImGradient.cpp  ImGradient.h  ImMenu.cpp  ImMenu.h  ImMenu.mm  ImUtilities.cpp  ImUtilities.h  ImUtilitiesOsx.mm  MainMenu.cpp  MainMenu.h  OsxUtilities.mm
engine/app/resources/: ImageManager.cpp  ImageManager.h
engine/app/sokol/: Event__strings.h
engine/application/: .App.cpp.icloud  .App.h.icloud  .Blank.h.icloud  App.cpp  App.h
engine/application/filesystem/: .Fetch.cpp.icloud  .Fetch.h.icloud
engine/application/sokol/: .Event__strings.h.icloud
engine/core/: Math.cpp  Math.h  Random.cpp  Random.h  Strings.cpp
engine/core/geometry/: Matrix.cpp  PointF.cpp  PointF.h  PolygonF.cpp  Rect.cpp  Rect.h  RectF.cpp  Vec2.cpp  Vec3.cpp
engine/core/imaging/: Bitmap.cpp  Color.cpp  Color.h  Filter.cpp
engine/data/: Asset.h  Constants.h  Declares.h  Game.h  Keys.h  Meta.cpp  Meta.h  Project.h  Reflect.cpp  Reflect.h  Types.h
engine/data/assets/: Image.cpp  Scene.cpp  Scene.h
engine/ecs/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  EventManager.h  System.h  SystemManager.h  Types.h
engine/entity/: Component.h  Data.h  Entity.cpp  Entity.h  Meta.h
engine/interface/: Component.h  Entity.h  Project.h  Scene.h
engine/s3d/: Matrix.cpp  Mesh__extrude.cpp  mesh.cpp  mesh.h  mesh_extrude.cpp  vec2.cpp  vec3.cpp  vec3.h
engine/scene2d/: Object2D.h  Scene2D.cpp  Scene2D.h
engine/scene2d/components/: Test1.h  Transform.h  Transform2D.h
engine/scene3d/: Mesh.cpp  Mesh.h  Mesh__extrude.cpp
engine/scene3d/components/: Transform.h
engine/scene3d/shaders/: BasicShader.glsl  BasicShader.glsl.h
engine/sxd/: App.cpp  App.h  Blank.h  Window.cpp  Window.h
player/: Player.cpp  player.cpp
shaders/: basic_shader.glsl  basic_shader.glsl.h
shaders/sokol_shdc_bin/: shader_instructions.txt
tools/hexembed/osx/: hexembed
